refactor(routing): remove default api route prefix
